Updated homepage and fixed layout issues

--- a/newconsoles.css
+++ b/newconsoles.css
@@ -30,6 +30,7 @@ header {
 
 .header-container {
     display: flex;
+    align-items: flex;
     justify-content: flex-start;
     width: 100%;
 }
@@ -67,6 +68,11 @@ header nav ul li a {
     margin-top: 45px;
 }
 
+
+header nav ul li:nth-child(4) {
+    margin-left: 10px; 
+    margin-right: 10px;
+}
 
 nav ul li a.active {
     text-decoration: underline;
@@ -425,6 +431,14 @@ body {
         margin-bottom: 20px;
     }
     
+    header nav ul li:nth-child(4) {
+        margin-left: 10px; 
+        margin-right: 10px; 
+    }
+    
+    nav ul li a.active {
+        text-decoration: underline;
+    }
     
 
     .search-icon-section {
